|profile button event  in dashboard on click sshow personal info can be eedited also|

--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -20,7 +20,7 @@
                             <a class="nav-link text-white" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Profile</a>
+                            <a  href="{{ url_for('profile') }}" class="nav-link text-white" href="#">Profile</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="#">Settings</a>
@@ -32,6 +32,7 @@
                             <a href="{{ url_for('logout') }}" class="btn btn-danger">Logout</a>
                         </li>
                     </ul>
+                    <p class="text-white text-center mt-4">Logged in as: {{ session.username }}</p>
                 </div>
             </nav>
 
